Update 'Why Choose Bloom'n Events Co?' section to use cards per branding

--- a/index.html
+++ b/index.html
@@ -355,30 +355,36 @@
                 <h2 id="whyUsHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Why Choose Bloom'n Events Co?</h2>
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-4">
-                        <div class="why-us-item text-center">
-                            <div class="why-us-icon mb-3">
-                                <i class="bi bi-tools" style="font-size: 3rem; color: var(--coreGold);"></i>
+                        <div class="card h-100 shadow why-us-card">
+                            <div class="card-body text-center">
+                                <div class="why-us-icon mb-3">
+                                    <i class="bi bi-tools" style="font-size: 3rem; color: var(--coreGold);"></i>
+                                </div>
+                                <h3 class="text-gold mb-3">Full In-House Production</h3>
+                                <p class="text-charcoal">From concept to completion, we manage every stage internally—engineering, design, fabrication, and installation.</p>
                             </div>
-                            <h3 class="text-gold mb-3">Full In-House Production</h3>
-                            <p class="text-charcoal">From concept to completion, we manage every stage internally—engineering, design, fabrication, and installation.</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="why-us-item text-center">
-                            <div class="why-us-icon mb-3">
-                                <i class="bi bi-shield-check" style="font-size: 3rem; color: var(--coreGold);"></i>
+                        <div class="card h-100 shadow why-us-card">
+                            <div class="card-body text-center">
+                                <div class="why-us-icon mb-3">
+                                    <i class="bi bi-shield-check" style="font-size: 3rem; color: var(--coreGold);"></i>
+                                </div>
+                                <h3 class="text-gold mb-3">40+ Years Experience</h3>
+                                <p class="text-charcoal">Deep engineering and safety expertise from high-risk, high-compliance environments ensures peace of mind.</p>
                             </div>
-                            <h3 class="text-gold mb-3">40+ Years Experience</h3>
-                            <p class="text-charcoal">Deep engineering and safety expertise from high-risk, high-compliance environments ensures peace of mind.</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="why-us-item text-center">
-                            <div class="why-us-icon mb-3">
-                                <i class="bi bi-lightbulb" style="font-size: 3rem; color: var(--coreGold);"></i>
+                        <div class="card h-100 shadow why-us-card">
+                            <div class="card-body text-center">
+                                <div class="why-us-icon mb-3">
+                                    <i class="bi bi-lightbulb" style="font-size: 3rem; color: var(--coreGold);"></i>
+                                </div>
+                                <h3 class="text-gold mb-3">Artistry Meets Technology</h3>
+                                <p class="text-charcoal">We merge traditional craftsmanship with modern digital tools and electronic systems for truly unique experiences.</p>
                             </div>
-                            <h3 class="text-gold mb-3">Artistry Meets Technology</h3>
-                            <p class="text-charcoal">We merge traditional craftsmanship with modern digital tools and electronic systems for truly unique experiences.</p>
                         </div>
                     </div>
                 </div>
