Fix service cards: correct background color and center text

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
                             <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Corporate Event Planning" loading="lazy" decoding="async">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Corporate Events</h3>
                                 <p class="text-charcoal">Professional planning and execution for business events, conferences, and product launches.</p>
                                 <a href="events.html" class="btn btn-gold btn-sm">Explore Corporate Events</a>
@@ -328,7 +328,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
                             <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1).jpeg" class="card-img-top" alt="Creative Workshops" loading="lazy" decoding="async">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Creative Workshops</h3>
                                 <p class="text-charcoal">Engaging hands-on workshops for both children and adults, fostering creativity and connection.</p>
                                 <a href="workshops.html" class="btn btn-gold btn-sm">Discover Workshops</a>
@@ -338,7 +338,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
                             <img src="images/BloomnDisplays/Displays (10).png" class="card-img-top" alt="Custom Displays" loading="lazy" decoding="async">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Custom Displays</h3>
                                 <p class="text-charcoal">Stunning, bespoke installations and decorations that transform any space for events or businesses.</p>
                                 <a href="displays.html" class="btn btn-gold btn-sm">View Custom Displays</a>
