Remove background from Success Stories section and center text on cards

--- a/index.html
+++ b/index.html
@@ -395,14 +395,14 @@
         </section>
 
         <!-- CASE STUDIES SECTION -->
-        <section class="section-main bg-light" aria-labelledby="caseStudiesHeading">
+        <section class="section-main" aria-labelledby="caseStudiesHeading">
             <div class="container">
                 <h2 id="caseStudiesHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Success Stories</h2>
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow">
                             <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h3 class="card-title text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
                                 <p class="card-text text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
                                 <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
@@ -412,7 +412,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow">
                             <img src="images/Hawaiian World Of Flavours/Hawaian250315-0173.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h3 class="card-title text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
                                 <p class="card-text text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
                                 <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
@@ -422,7 +422,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow">
                             <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1).jpeg" class="card-img-top" alt="Hawaiian Neighbourhood Nibbles School Holiday Programme" loading="lazy" decoding="async">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h3 class="card-title text-gold mb-3">School Holiday Programme Drives Traffic Across 7 Centres</h3>
                                 <p class="card-text text-charcoal">Food-based July school holiday activity across seven Hawaiian shopping centres that drove traffic uplifts and encouraged family dwell time.</p>
                                 <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Case Study</a>
