--- a/index.html
+++ b/index.html
@@ -494,18 +494,26 @@
         </section>
 
         <!-- FINAL CTA SECTION -->
-        <section class="section-main bg-light-gold text-center" aria-labelledby="ctaHeading">
+        <section class="section-main" aria-labelledby="ctaHeading">
             <div class="container">
-                <h2 id="ctaHeading" class="text-charcoal mb-4">Ready to Create Your Next Unforgettable Event?</h2>
-                <p class="lead text-charcoal mb-5">Let's discuss how we can bring your vision to life with our unique blend of engineering, artistry, and innovation.</p>
-                <div class="cta-buttons">
-                    <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
-                    <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Portfolio</a>
+                <div class="row justify-content-center">
+                    <div class="col-lg-10">
+                        <div class="card shadow cta-card">
+                            <div class="card-body text-center p-5">
+                                <h2 id="ctaHeading" class="text-gold mb-4">Ready to Create Your Next Unforgettable Event?</h2>
+                                <p class="lead text-charcoal mb-5">Let's discuss how we can bring your vision to life with our unique blend of engineering, artistry, and innovation.</p>
+                                <div class="cta-buttons">
+                                    <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                                    <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Portfolio</a>
+                                </div>
+                                <p class="text-charcoal mt-4 mb-0">
+                                    <i class="bi bi-telephone-fill"></i> <a href="tel:1800826268" class="text-gold">1800 826 268</a> | 
+                                    <i class="bi bi-envelope-fill"></i> <a href="mailto:enquiries@bloomneventsco.com.au" class="text-gold">enquiries@bloomneventsco.com.au</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <p class="text-charcoal mt-4 mb-0">
-                    <i class="bi bi-telephone-fill"></i> <a href="tel:1800826268" class="text-gold">1800 826 268</a> | 
-                    <i class="bi bi-envelope-fill"></i> <a href="mailto:enquiries@bloomneventsco.com.au" class="text-gold">enquiries@bloomneventsco.com.au</a>
-                </p>
             </div>
         </section>
 
