--- a/about.html
+++ b/about.html
@@ -90,11 +90,6 @@
         });
       }
     </script>
-    <style>
-        /* Scoped to About page hero only */
-        .about-hero-wrap { position: relative; border: 2px solid var(--coreGold); border-radius: 15px; overflow: hidden; background-color: var(--coreChampers); }
-        .about-hero-overlay { position: relative; }
-    </style>
 </head>
 
 <body class="about">
@@ -140,24 +135,20 @@
 
     <main>
         <h1 class="visually-hidden">About Bloom'n Events Co</h1>
-        <!-- HERO VIDEO SECTION -->
-        <section class="section-hero" aria-labelledby="aboutHeroHeading" style="position: relative; overflow: hidden;">
-            <div class="container px-0">
-                <div class="about-hero-wrap" style="position: relative; border: 2px solid var(--coreGold); border-radius: 15px; overflow: hidden; background-color: var(--coreChampers);">
-                    <div class="container about-hero-overlay" style="display: flex; align-items: center; justify-content: center; padding: 24px 0;">
-                        <div class="row g-3 justify-content-center px-3" style="align-content: center;">
-                            <div class="col-12">
-                                <div style="background: rgba(0,0,0,0.55); color: #fff; border-radius: 12px; padding: 16px 20px; box-shadow: 0 4px 16px rgba(0,0,0,.25);">
-                                    <h2 id="aboutHeroHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-2">Vision</h2>
-                                    <p class="mb-0" style="color:#f1f1f1;">To bring connection, joy, and beauty to every corner of Western Australia — transforming moments into memories through inspired, sustainable event experiences.</p>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div style="background: rgba(0,0,0,0.55); color: #fff; border-radius: 12px; padding: 16px 20px; box-shadow: 0 4px 16px rgba(0,0,0,.25);">
-                                    <h2 class="text-gold heading-blush-bg content-heading-large text-center mb-2">Mission</h2>
-                                    <p class="mb-0" style="color:#f1f1f1;">We're a family-founded company driven by purpose and passion. We craft immersive artistic activations and design unforgettable events that uplift, connect, and give back. By working with other local businesses, with the same creed and supporting regional communities, we prove that business success and compassion can grow side by side.</p>
-                                </div>
-                            </div>
+        <!-- VISION AND MISSION SECTION -->
+        <section class="section-hero" aria-labelledby="aboutHeroHeading">
+            <div class="container">
+                <div class="row g-3 justify-content-center">
+                    <div class="col-12">
+                        <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <h2 id="aboutHeroHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-2">Vision</h2>
+                            <p class="mb-0 text-charcoal">To bring connection, joy, and beauty to every corner of Western Australia — transforming moments into memories through inspired, sustainable event experiences.</p>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
+                            <h2 class="text-gold heading-blush-bg content-heading-large text-center mb-2">Mission</h2>
+                            <p class="mb-0 text-charcoal">We're a family-founded company driven by purpose and passion. We craft immersive artistic activations and design unforgettable events that uplift, connect, and give back. By working with other local businesses, with the same creed and supporting regional communities, we prove that business success and compassion can grow side by side.</p>
                         </div>
                     </div>
                 </div>
