--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
-                            <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Corporate Event Planning" loading="lazy" decoding="async">
+                            <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Corporate Event Planning" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Centuria Connect140/Connect140 (1)-480w.jpg 480w, images/Centuria Connect140/Connect140 (1)-768w.jpg 768w, images/Centuria Connect140/Connect140 (1)-1200w.jpg 1200w, images/Centuria Connect140/Connect140 (1)-1600w.jpg 1600w">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Corporate Events</h3>
                                 <p class="text-charcoal">Professional planning and execution for business events, conferences, and product launches.</p>
