Update Custom Displays card image to new hero image

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
-                            <img src="images/BloomnDisplays/Displays (10).png" class="card-img-top" alt="Custom Displays" loading="lazy" decoding="async">
+                            <img src="images/Home/Custom Displays Hero Image.jpg" class="card-img-top" alt="Custom Displays" loading="lazy" decoding="async" width="1600" height="900">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Custom Displays</h3>
                                 <p class="text-charcoal">Stunning, bespoke installations and decorations that transform any space for events or businesses.</p>
