Update Creative Workshops card image to use Home folder hero image

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
-                            <img src="images/Hawaiian World Of Flavours/Hawaian250315-0173.jpg" class="card-img-top" alt="Creative Workshops" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Hawaiian World Of Flavours/Hawaian250315-0173-480w.jpg 480w, images/Hawaiian World Of Flavours/Hawaian250315-0173-768w.jpg 768w, images/Hawaiian World Of Flavours/Hawaian250315-0173-1200w.jpg 1200w, images/Hawaiian World Of Flavours/Hawaian250315-0173-1600w.jpg 1600w">
+                            <img src="images/Home/Creative Workshops Hero Image.jpg" class="card-img-top" alt="Creative Workshops" loading="lazy" decoding="async" width="1600" height="900">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Creative Workshops</h3>
                                 <p class="text-charcoal">Engaging hands-on workshops for both children and adults, fostering creativity and connection.</p>
