Update case study card images to use Home folder images

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow">
-                            <img src="images/Hawaiian World Of Flavours/Hawaian250315-0173.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async">
+                            <img src="images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async" width="1600" height="900">
                             <div class="card-body text-center">
                                 <h3 class="card-title text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
                                 <p class="card-text text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
@@ -421,7 +421,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow">
-                            <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1).jpeg" class="card-img-top" alt="Hawaiian Neighbourhood Nibbles School Holiday Programme" loading="lazy" decoding="async">
+                            <img src="images/Home/School Holiday Activity Drives Traffic Across 5 Centres in 5 Days CASE STUDY IMAGE.jpg" class="card-img-top" alt="Hawaiian Neighbourhood Nibbles School Holiday Programme" loading="lazy" decoding="async" width="1600" height="900">
                             <div class="card-body text-center">
                                 <h3 class="card-title text-gold mb-3">School Holiday Programme Drives Traffic Across 7 Centres</h3>
                                 <p class="card-text text-charcoal">Food-based July school holiday activity across seven Hawaiian shopping centres that drove traffic uplifts and encouraged family dwell time.</p>
