Fix case study card image heights for consistent sizing

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow">
-                            <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async">
+                            <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async" width="1600" height="900">
                             <div class="card-body text-center">
                                 <h3 class="card-title text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
                                 <p class="card-text text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
